<resources>
    <string name="app_name">Lesson5</string>
    <string name="text_top">Добро пожаловать в авторизацию</string>
    <string name="text_prof">Ваш профиль</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="button_login">Войти</string>
    <string name="button_reg">Регистрация</string>
    <string name="button_refresh">Обновить</string>
    <string name="button_exit">Выйти</string>
    <string name="proftext_hint">Ваш логин</string>
    <string name="profpass_hint">Ваш пароль</string>

</resources>